Add image to DuckDB blog post
Added an image to enhance the explanation of DuckDB.

--- a/_posts/2025-09-29-duckdb.md
+++ b/_posts/2025-09-29-duckdb.md
@@ -18,6 +18,8 @@ This is where **DuckDB** fits: not as a toy database, and not as a replacement f
 
 DuckDB is often described as *“SQLite for analytics”*. That description is accurate, but incomplete. What matters more is *why* this design works so well for modern ETL and analytics workflows.
 
+<img width="1024" height="1024" alt="image" src="https://github.com/user-attachments/assets/ede453a5-e04e-4454-9e38-715e73af9ac7" />
+
 ---
 
 ## What DuckDB Is (and Why It’s Built This Way)
