Refactor section headers for clarity in duckdb.md

--- a/_posts/2025-09-29-duckdb.md
+++ b/_posts/2025-09-29-duckdb.md
@@ -63,7 +63,7 @@ For analytics engineers, this is especially valuable. It means you can validate 
 
 ---
 
-## SQL as the Primary Interface (Not an Afterthought)
+## SQL as the Primary Interface
 
 DuckDB speaks standard SQL. There is no custom DSL, no hidden API layer. Creating tables, inserting data, querying results — all behave as expected:
 
@@ -88,7 +88,7 @@ duckdb
 
 ---
 
-## Querying Files Directly: Rethinking “Extract” in ETL
+## Querying Files Directly
 
 One of DuckDB’s most impactful features for ETL workflows is its ability to **query files directly**, without an import step.
 
