Revise podcast link and image in PandasAI post
Updated podcast reference and modified image tag.

--- a/_posts/2026-02-13-PandasAI.md
+++ b/_posts/2026-02-13-PandasAI.md
@@ -18,9 +18,11 @@ The author of the blog, Viktor Vörös, walks through setting up PandasAI with a
 
 This got me curious enough to dig deeper into PandasAI itself and how it might fit into a modern data science workflow. What I found was pretty interesting, so let me share what I've learned.
 
-<img width="1024" height="1536" alt="image" src="https://github.com/user-attachments/assets/9b873c39-f56f-4c26-b7b9-0dee7095bd73" />
 
-***I've created a podcast about this topic, based on the conversation I had with an LLM in NotebookLM***, [check it out here](https://github.com/realivanivani/realivanivani.github.io/blob/master/files/Build_a_Private_AI_Data_Analyst)
+***I've asked NotebookLM to a podcast about this topic, based on the conversation I had with it***, [check it out here](https://soundcloud.com/iivani/podcast)
+
+
+<img width="1024" height="1536" alt="image" src="https://github.com/user-attachments/assets/9b873c39-f56f-4c26-b7b9-0dee7095bd73" />
 
 ## What Exactly Is PandasAI?
 
