Fix podcast link for NotebookLM discussion
Updated the podcast link for NotebookLM in the article.

--- a/_posts/2026-02-13-PandasAI.md
+++ b/_posts/2026-02-13-PandasAI.md
@@ -19,7 +19,7 @@ The author of the blog, Viktor Vörös, walks through setting up PandasAI with a
 This got me curious enough to dig deeper into PandasAI itself and how it might fit into a modern data science workflow. What I found was pretty interesting, so let me share what I've learned.
 
 
-***I've asked NotebookLM to a podcast about this topic, based on the conversation I had with it***, [check it out here](https://soundcloud.com/iivani/podcast)
+***I've asked NotebookLM to a podcast about this topic, based on the conversation I had with it***, [check it out here](https://notebooklm.google.com/notebook/95500516-8fb9-4d77-89df-eb01490c97b9?artifactId=0939adcf-07d9-4d1e-87b9-0f8ca300dc11)
 
 
 <img width="1024" height="1536" alt="image" src="https://github.com/user-attachments/assets/9b873c39-f56f-4c26-b7b9-0dee7095bd73" />
